TEST_PROGRAMS/INVALID_TYPECHECK/mult_strings.go
package main;

func main() {
    
    //this operation is not allowed
    var c string = "hello";
    var x string = c*"hello";
    print(x);
}
